--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <a href="https://captcha-test.github.io/home">← Back to Home</a>
+  <a href="https://captcha-test.github.io/">← Back to Home</a>
   <h1>Google reCAPTCHA</h1>
   <form action="#" method="POST">
     <div class="g-recaptcha" data-sitekey="6LfqzaYrAAAAABMDCxeJn3GBtGkdXVTgZds1tpMh"></div>
